# mlflow-elasticsearchstore

./: docker-compose.yml  pyproject.toml
mlflow_elasticsearchstore/: elasticsearch_store.py  models.py
